<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ЗНТУ Путівник</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find">FindActivity</string>
    <string name="title_activity_show_map">ShowMapActivity</string>
    <string name="house">Корпус</string>
    <string name="floor">Поверх</string>
    <string name="Find">Знайти аудиторию</string>
    <string name="Volume">Розклад дзвінків</string>
    <string name="Zntu">Сайт ЗНТУ</string>
    <string name="prof">Новини Профкому студентів</string>
    <string name="dzvonic">Розклад дзвінків ЗНТУ</string>
     <string name="find_aud">Знайти аудиторію</string>
    <string name="aud_num">Введіть номер аудиторії</string>
    <string name="pokaz_aud">Показати на карті</string>


      <string name="para1">1 пара: 08:30 - 09:50</string>
      <string name="para2">2 пара: 10:05 - 11:25</string>
      <string name="para3">3 пара: 11:55 - 13:15</string>
      <string name="para4">4 пара: 13:25 - 14:45</string>
      <string name="para5">5 пара: 14:55 - 16:15</string>
      <string name="para6">6 пара: 16:45 - 18:05</string>
      <string name="para7">7 пара: 18:15 - 19:35</string>
      <string name="para8">8 пара: 19:45 - 21:05</string>
    <string name="swi">Авт.</string>

    <string name="Menu1">Налаштування</string>
    <string name="Menu2">Довідник ЗНТУ</string>
    <string name="Menu3">Довідник Профкому студентів</string>
    <string name="Menu4">Загальна інформація</string>

    <string name="selector">ЕПт</string>

    <string name="Decanat"><h1>Транспортний факультет</h1></string>
    <string name="texttest">Єто просто текст которій буде тут отобрадтсья когда я сделаю все как мнетнеобходимо рабоаіп</string>
    <string name="DovText">Довідка ЗНТУ</string>
    <string name="vidsutnyaD">Довідка відсутня</string>


    <string-array name="TelephoneList">

        <item>Профком студентів ЗНТУ</item>
        <item>Телефони ЗНТУ</item>
        <item>(ТФ) Транспортний</item>
        <item>(МФ) Машинобудівний</item>
        <item>(ІФ) Інженерно-фізичний</item>
        <item>(ЕТФ) Електротехнічний</item>
        <item>(ФРЕТ) Радіоелектроніки та телекомунікацій</item>
        <item>(ФКНТ) Комп’ютерних наук і технологій</item>
        <item>(ФЕУ) Економіки та управління</item>
        <item>(ГФ) Гуманітарний</item>
        <item>(УФКС) Управління фізичною культурою та спортом</item>
        <item>(МТУ) Міжнародного туризму та управління персоналом</item>
        <item>(ГП) Гуманітарно-правовий факультет</item>

    </string-array>

    <string name="TelephoneList0">
        &lt;p&gt;&lt;b&gt;Профком студентів ЗНТУ&lt;/b&gt;&lt;/p&gt;

        &lt;p&gt;&lt;b&gt;Голова профкому студентів, аспірантів та докторантів ЗНТУ:&lt;/b&gt;&lt;br&gt;
        (Іванченко Андрій Володимирович)&lt;br&gt;
        &lt;b&gt;Тел.&lt;/b&gt; +380612244235&lt;br&gt;
        &lt;b&gt;E-mail:&lt;/b&gt; andiva@zntu.edu.ua
        &lt;/p&gt;

        &lt;p&gt;&lt;b&gt;Заступник голови профкому студентів ЗНТУ:&lt;/b&gt;&lt;br&gt;
        (Дубина Вадим Миколайович)&lt;br&gt;
        &lt;b&gt;Тел.&lt;/b&gt; +380617698211&lt;br&gt;
        &lt;/p&gt;


        &lt;p&gt;&lt;b&gt;Помічник голови профкому студентів ЗНТУ:&lt;/b&gt;&lt;br&gt;
        (Кашуба Юлія)&lt;br&gt;
        &lt;b&gt;Тел.&lt;/b&gt; +380612244235&lt;br&gt;
        &lt;/p&gt;

        &lt;p&gt;&lt;b&gt;Адреса:&lt;/b&gt;&lt;br&gt;
        69063, м. Запоріжжя, вул. Жуковського 64, к.368-А &lt;/p&gt;

        &lt;p&gt;&lt;b&gt;Начальник Центру сприяння працевлаштуванню студентів та випускників ЗНТУ:&lt;/b&gt;&lt;br&gt;
        (Олефір Світлана)&lt;br&gt;
        &lt;b&gt;Тел.&lt;/b&gt; +380617644592 каб. 329-А  &lt;br&gt;
        &lt;b&gt;E-mail:&lt;/b&gt; sp.zntu@gmail.com
        &lt;/p&gt;
    </string>
    <string name="fing_aud">Знайти аудиторію</string>

      <string name="TelephoneList1">
    &lt;p&gt;&lt;b&gt;У наступній версії очікується..&lt;/b&gt;&lt;/p&gt;
    </string>

     <string name="TelephoneList2">
    &lt;p&gt;&lt;b&gt;Транспортний факультет&lt;/b&gt;&lt;/p&gt;

    &lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Жуковського 64, м. Запоріжжя, Україна, 69063&lt;br&gt;
    &lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 245&lt;br&gt;
    &lt;b&gt;Тел.:&lt;/b&gt; +380(61)7698317, +380(61)7644656&lt;br&gt;
    &lt;b&gt;E-mail:&lt;/b&gt; dekanat_tf@zntu.edu.ua
    &lt;/p&gt;
    &lt;p&gt;&lt;b&gt;Профбюро студентів ТФ&lt;/b&gt;&lt;/p&gt;

    &lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
    (Безсмертний Владислав Григорович)&lt;br&gt;
    &lt;b&gt;Тел.&lt;/b&gt;   +380951345338   &lt;br&gt;
    &lt;/p&gt;
    </string>

     <string name="TelephoneList3">
&lt;p&gt;&lt;b&gt;Машинобудівний факультет&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Жуковського 64, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 380&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7698350, +380(61)7644423&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_mbf@zntu.edu.ua
&lt;/p&gt;
&lt;p&gt;&lt;b&gt;Профбюро студентів МФ&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Резніченко Вікторія Борисівна)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380666147400   &lt;br&gt;
&lt;/p&gt;
    </string>


     <string name="TelephoneList4">
&lt;p&gt;&lt;b&gt;Інженерно-фізичний факультет&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Жуковського 64, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 345&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7644674, +380(61)7698414&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_if@zntu.edu.ua
&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Профбюро студентів ІФ&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Шаповал Ганна Олександрівна)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380997943025   &lt;br&gt;
&lt;/p&gt;
    </string>


     <string name="TelephoneList5">
&lt;p&gt;&lt;b&gt;Електротехнічний факультет&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Жуковського 64, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 266&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7644625, +380(61)7698426&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_etf@zntu.edu.ua
&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Профбюро студентів ЕТФ&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Жежера Іван Іванович)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380991812750   &lt;br&gt;
&lt;/p&gt;
    </string>


     <string name="TelephoneList6">
&lt;p&gt;&lt;b&gt;Факультет радіоелектроніки та телекомунікацій&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Жуковського 64, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 369&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7698306, +380(61)7634258&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_fret@zntu.edu.ua
&lt;/p&gt;
&lt;p&gt;&lt;b&gt;Профбюро студентів ФРЕТ&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Дейнека Ганна Петрівна)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380666695902   &lt;br&gt;
&lt;/p&gt;
    </string>


    <string name="TelephoneList7">
&lt;p&gt;&lt;b&gt;Факультет комп’ютерних наук і технологій&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Жуковського 64, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 362&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7643361&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_fiot@zntu.edu.ua
&lt;/p&gt;
&lt;p&gt;&lt;b&gt;Профбюро студентів ФКНТ&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Космина Наталія Сергіївна)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380997452292   &lt;br&gt;
&lt;/p&gt;
    </string>


    <string name="TelephoneList8">
&lt;p&gt;&lt;b&gt;Факультет економіки та управління&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Жуковського 64, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 278, 277-Б&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7643416, +380(61)7698407, +380(61)7698233, методисти – +380(61)7642329&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_feu@zntu.edu.ua
&lt;/p&gt;
&lt;p&gt;&lt;b&gt;Профбюро студентів ФЕУ&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Корогод Михайло Костянтинович)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +3806666634662   &lt;br&gt;
&lt;/p&gt;
    </string>


    <string name="TelephoneList9">
&lt;p&gt;&lt;b&gt;Гуманітарний факультет&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Жуковського 64, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 273&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +38(061)7698307&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_gf@zntu.edu.ua
&lt;/p&gt;
&lt;p&gt;&lt;b&gt;Профбюро студентів ГФ&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Кравченко Євген Васильович)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380669605660   &lt;br&gt;
&lt;/p&gt;
    </string>


    <string name="TelephoneList10">
&lt;p&gt;&lt;b&gt;Факультет управління фізичною культурою та спортом&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Тургенєва 39, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 392a (IV корпус)&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7698308&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_ufks@zntu.edu.ua
&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Профбюро студентів УФКС&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Шевченко Ірина Валеріївна)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380996653479   &lt;br&gt;
&lt;/p&gt;
    </string>


<string name="TelephoneList11">
&lt;p&gt;&lt;b&gt;Факультет міжнародного туризму та управління персоналом&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Тургенєва 39, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 385 (IV корпус)&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7698568&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_mtu@zntu.edu.ua
&lt;/p&gt;
&lt;p&gt;&lt;b&gt;Профбюро студентів МТУ&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Джеппарова Ліля Джаферовна)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380685805973   &lt;br&gt;
&lt;/p&gt;
    </string>

<string name="TelephoneList12">
&lt;p&gt;&lt;b&gt;Гуманітарно-правовий факультет&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Адреса деканату:&lt;/b&gt;&lt;br&gt; вул. Тургенєва 39, м. Запоріжжя, Україна, 69063&lt;br&gt;
&lt;b&gt;Аудиторія (кабінет):&lt;/b&gt; 491 (IV корпус)&lt;br&gt;
&lt;b&gt;Тел.:&lt;/b&gt; +380(61)7698567&lt;br&gt;
&lt;b&gt;E-mail:&lt;/b&gt; dekanat_gp@zntu.edu.ua
&lt;/p&gt;
&lt;p&gt;&lt;b&gt;Профбюро студентів ГП&lt;/b&gt;&lt;/p&gt;

&lt;p&gt;&lt;b&gt;Голова профбюро:&lt;/b&gt;&lt;br&gt;
(Зінченко Ілля)&lt;br&gt;
&lt;b&gt;Тел.&lt;/b&gt;   +380958991244   &lt;br&gt;
&lt;/p&gt;
    </string>


</resources>
