<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/lay"
    android:background="@drawable/korpus">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/para1"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:radius="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/para2"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:radius="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/para3"
        android:id="@+id/textView14"
        android:layout_gravity="center_horizontal"
        android:radius="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/para4"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:radius="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/para5"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:radius="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/para6"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/para7"
        android:id="@+id/textView12"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/para8"
        android:id="@+id/textView13"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Відпочинок.."
        android:id="@+id/textView15"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        android:background="@drawable/rounded_corners" />




</LinearLayout>